tests/machine/x/hs/group_by_having.error

/workspace/mochi/tests/machine/x/hs/group_by_having.hs:138:3: error:
    • No instance for (Aeson.ToJSON AnyValue)
        arising from a use of ‘_json’
    • In a stmt of a 'do' block: _json big
      In the expression: do _json big
      In an equation for ‘main’: main = do _json big
    |
138 |   _json big
    |   ^^^^^
